--- a/src/components/_button.scss
+++ b/src/components/_button.scss
@@ -32,7 +32,6 @@ $eve-button-font-sizes: (
     outline: none;
     text-decoration: none;
     user-select: none;
-    vertical-align: middle;
 
     &:hover,
     &:active,
