--- a/src/components/_checkbox.scss
+++ b/src/components/_checkbox.scss
@@ -7,7 +7,6 @@ $eve-checkbox-mark-border-width: .125rem;
     height: $eve-checkbox-size;
     justify-content: center;
     position: relative;
-    vertical-align: middle;
     width: $eve-checkbox-size;
 
     input {
