--- a/src/components/_radio.scss
+++ b/src/components/_radio.scss
@@ -6,7 +6,6 @@ $eve-radio-size: 1.125rem;
     height: $eve-radio-size;
     justify-content: center;
     position: relative;
-    vertical-align: middle;
     width: $eve-radio-size;
 
     input {
