--- a/src/components/_switch.scss
+++ b/src/components/_switch.scss
@@ -7,7 +7,6 @@ $eve-switch-height: 1.125rem;
     height: $eve-switch-height;
     justify-content: center;
     position: relative;
-    vertical-align: middle;
     width: $eve-switch-width;
 
     input {
