--- a/src/components/_textarea.scss
+++ b/src/components/_textarea.scss
@@ -18,7 +18,6 @@ $eve-textarea-colors: (
     min-width: 100%;
     outline: none;
     padding: $eve-spacing-tiny $eve-spacing-small;
-    vertical-align: middle;
     width: 100%;
 
     &::placeholder {
